fix function and add pics

--- a/all-jing-an.html
+++ b/all-jing-an.html
@@ -112,9 +112,9 @@
         <a class="col" href="index.html">Back to front page</a>
         <!-- social icons -->
         <div class="col-3 icon-list">
-            <i class="nes-icon instagram is-middle"></i>
-            <i class="nes-icon linkedin is-middle"></i>
-            <i class="nes-icon whatsapp is-middle"></i>
+            <i class="nes-icon instagram is-middle" onclick="openIG()"></i>
+            <i class="nes-icon linkedin is-middle" onclick="openLinkedIn()"></i>
+            <i class="nes-icon whatsapp is-middle" onclick="openWhatsApp()"></i>
         </div>
         <a class="col-6" href="https://webbroccoli.000.pe/?i=1">©2020-2024 Jing-An Chen. All rights reserved.</a>
         <!-- bootstrap js -->
@@ -125,6 +125,7 @@
         <!-- broccoli code -->
         <script src="js/vueBroccmon.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/route.js"></script>
     </footer>
 </body>
 </html>
