--- a/designer.html
+++ b/designer.html
@@ -17,6 +17,7 @@
 </head>
 
 <body class="container p-1">
+    <a class="nes-btn skipBtn" href="#summarySection">SKIP</a>
     <!-- svg background -->
     <div class="bmCardBg">
         <svg viewBox="0 0 1920 1080">
@@ -82,17 +83,20 @@
                 <button type="button" class="nes-btn" onclick="document.getElementById('desDia').showModal();">
                     DESIGNER
                 </button>
-                <dialog class="nes-dialog is-rounded" id="desDia">
-                    <form method="dialog" class="d-flex flex-column align-items-center">
-                        <div>
-                            <h4 class="title">Designer Jing-An</h4>
-                            <p>Go see designer Jing-An section</p>
-                            <img src="media/portfolio-design-sketch-01.jpg">
+                <dialog class="designer nes-dialog is-rounded" id="desDia">
+                    <form method="dialog" class="h-100 d-flex flex-column align-items-end justify-content-end">
+                        <div class="d-flex flex-column align-items-end">
+                            <svg width="10rem" height="10rem" viewBox="0 0 300 300">
+                                <!-- see vueBroccmons.js -->
+                                <g class="hifiDes"></g>
+                            </svg>
                         </div>
-                        <div class="w-100 d-flex justify-content-between">
-                            <button class="nes-btn">Back</button>
-                            <button class="nes-btn is-primary" onclick="desPage()">See Designer</button>
+                        <div class="w-100 d-flex justify-content-end">
+                            <button class="nes-btn m-3">Back</button>
+                            <button class="nes-btn is-success m-3" onclick="desPage()">See Designer</button>
                         </div>
+                        <h4 class="title">Designer Jing-An</h4>
+                        <p>Go see designer Jing-An section</p>
                     </form>
                 </dialog>
             </section>
@@ -100,17 +104,20 @@
                 <button type="button" class="nes-btn" onclick="document.getElementById('devDia').showModal();">
                     DEVELOPER
                 </button>
-                <dialog class="nes-dialog is-rounded" id="devDia">
-                    <form method="dialog" class="d-flex flex-column align-items-center">
+                <dialog class="developer nes-dialog is-rounded" id="devDia">
+                    <form method="dialog" class="h-100 d-flex flex-column align-items-end justify-content-end">
                         <div>
-                            <h4 class="title">Developer Jing-An</h4>
-                            <p>Go see developer Jing-An section</p>
-                            <img src="media/portfolio-design-sketch-01.jpg">
+                            <svg width="10rem" height="10rem" viewBox="0 0 300 300">
+                                <!-- see vueBroccmons.js -->
+                                <g class="hifiDev"></g>
+                            </svg>
                         </div>
-                        <div class="w-100 d-flex justify-content-between">
-                            <button class="nes-btn">Back</button>
-                            <button class="nes-btn is-primary" onclick="devPage()">See Designer</button>
+                        <div class="w-100 d-flex justify-content-end">
+                            <button class="nes-btn m-3">Back</button>
+                            <button class="nes-btn is-primary m-3" onclick="devPage()">See Developer</button>
                         </div>
+                        <h4 class="title">Developer Jing-An</h4>
+                        <p>Go see developer Jing-An section</p>
                     </form>
                 </dialog>
             </section>
@@ -118,17 +125,20 @@
                 <button type="button" class="nes-btn" onclick="document.getElementById('phoDia').showModal();">
                     PHOTOGRAPHER
                 </button>
-                <dialog class="nes-dialog is-rounded" id="phoDia">
-                    <form method="dialog" class="d-flex flex-column align-items-center">
+                <dialog class="photographer nes-dialog is-rounded" id="phoDia">
+                    <form method="dialog" class="h-100 d-flex flex-column align-items-end justify-content-end">
                         <div>
-                            <h4 class="title">Photographer Jing-An</h4>
-                            <p>Go see photographer Jing-An section</p>
-                            <img src="media/portfolio-design-sketch-01.jpg">
+                            <svg width="10rem" height="10rem" viewBox="0 0 300 300">
+                                <!-- see vueBroccmons.js -->
+                                <g class="hifiPho"></g>
+                            </svg>
                         </div>
-                        <div class="w-100 d-flex justify-content-between">
-                            <button class="nes-btn">Back</button>
-                            <button class="nes-btn is-primary" onclick="phoPage()">See Designer</button>
+                        <div class="w-100 d-flex justify-content-end">
+                            <button class="nes-btn m-3">Back</button>
+                            <button class="nes-btn is-warning m-3" onclick="phoPage()">See Photographer</button>
                         </div>
+                        <h4 class="title">Photographer Jing-An</h4>
+                        <p>Go see photographer Jing-An section</p>
                     </form>
                 </dialog>
             </section>
@@ -145,22 +155,19 @@
                     to express innovative design ideas and aesthetics.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(min-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(min-width: 650px)" srcset="media/sq49/sq_49.jpg">
+                        <source media="(min-width: 465px)" srcset="media/sq49/sq_49_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq49/sq_49_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(min-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(min-width: 650px)" srcset="media/sq48/sq_48.jpg">
+                        <source media="(min-width: 465px)" srcset="media/sq48/sq_48_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq48/sq_48_s.jpg" alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(min-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(min-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(min-width: 650px)" srcset="media/sq44/sq_44.jpg">
+                        <source media="(min-width: 465px)" srcset="media/sq44/sq_4s_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq44/sq_44_s.jpg" alt="">
                     </picture>
                 </div>
             </div>
@@ -176,22 +183,22 @@
                     problem-solving, and managing multiple projects to ensure timely completion. </p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/m19_logo/m19_logo.jpg">
+                        <source media="(max-width: 465px)" srcset="media/m19_logo/m19_logo_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_logo/m19_logo_s.jpg"
+                            alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/m19_life/m19_life.png">
+                        <source media="(max-width: 465px)" srcset="media/m19_life/m19_life_m.png">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_life/m19_life_s.png"
+                            alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/m19_event/m19_event.png">
+                        <source media="(max-width: 465px)" srcset="media/m19_event/m19_event_m.png">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/m19_event/m19_event_s.png"
+                            alt="">
                     </picture>
                 </div>
             </div>
@@ -207,22 +214,22 @@
                     collaborations. </p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/sq14/sq_14.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq14/sq_14_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq14/sq_14_s.jpg"
+                            alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/sq32/sq_32.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq32/sq_32_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq32/sq_32_s.jpg"
+                            alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/sq56/sq_56.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq56/sq_56_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq56/sq_56_s.jpg"
+                            alt="">
                     </picture>
                 </div>
             </div>
@@ -239,29 +246,33 @@
                     mastering new skills within just one week.</p>
                 <div class="images row justify-content-center">
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/sq37/sq_37.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq37/sq_37_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq37/sq_37_s.jpg"
+                            alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/sq46/sq_46.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq46/sq_46_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq46/sq_46_s.jpg"
+                            alt="">
                     </picture>
                     <picture class="col-3">
-                        <source media="(max-width: 650px)" srcset="media/portfolio-design-sketch-03.jpg">
-                        <source media="(max-width: 465px)" srcset="media/portfolio-design-sketch-02.jpg">
-                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)"
-                            src="media/portfolio-design-sketch-01.jpg" alt="">
+                        <source media="(max-width: 650px)" srcset="media/sq51/sq_51.jpg">
+                        <source media="(max-width: 465px)" srcset="media/sq51/sq_51_m.jpg">
+                        <img onmouseover="showExample(this)" onmouseleave="hideExample(this)" src="media/sq51/sq_51_s.jpg"
+                            alt="">
                     </picture>
                 </div>
             </div>
         </section>
     </main>
-    <footer class="animate__animated animate__fadeIn animate__delay-1s">
+    <footer class="animate__animated animate__fadeIn animate__delay-1s d-flex flex-row justify-content-center">
         <button class="nes-btn is-rounded back" onclick="backHome()">Go Back</button>
+        <label>
+            <input type="radio" class="nes-radio" name="answer" checked />
+            <span>Scroll Down</span>
+        </label>
         <button class="nes-btn is-success is-rounded next" onclick="clientDebut()">I want this Jing-An!</button>
         <!-- jquery -->
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
