--- a/hire.html
+++ b/hire.html
@@ -43,11 +43,11 @@
                 <h3>Contact with him NOW!</h3>
                 <dl class="p-0">
                     <dt><i class="nes-phone"></i></dt>
-                    <dd><a class="phone">(+1) 343-988-4869</a></dd>
+                    <dd><a class="phone" href="tel:+13439884869">(+1) 343-988-4869</a></dd>
                     <dt><i class="nes-icon gmail"></i></dt>
-                    <dd><a>canadabroccoli@gmail.com</a></dd>
+                    <dd><a href="mailto:canadabroccoli@gmail.com">canadabroccoli@gmail.com</a></dd>
                     <dt><i class="nes-icon linkedin"></i></dt>
-                    <dd><a>www.linkedin.com/in/broccolidesign</a></dd>
+                    <dd><a href="www.linkedin.com/in/broccolidesign">www.linkedin.com/in/broccolidesign</a></dd>
                 </dl>
             </div>
         </section>
@@ -69,9 +69,9 @@
         <a class="col-6" href="https://webbroccoli.000.pe/?i=1">©2020-2024 Jing-An Chen. All rights reserved.</a>
         <!-- social icons -->
         <div class="col-3 icon-list">
-            <i class="nes-icon instagram is-middle"></i>
-            <i class="nes-icon linkedin is-middle"></i>
-            <i class="nes-icon whatsapp is-middle"></i>
+            <i class="nes-icon instagram is-middle" onclick="openIG()"></i>
+            <i class="nes-icon linkedin is-middle" onclick="openLinkedIn()"></i>
+            <i class="nes-icon whatsapp is-middle" onclick="openWhatsApp()"></i>
         </div>
         <button type="button" class="nes-btn" onclick="backHome()">Call Jing-An</button>
         <!-- jquery -->
