--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         <a class="col-6 link" href="https://webbroccoli.000.pe/?i=1">©2020-2024 Jing-An Chen. All rights reserved.</a>
         <!-- social icons -->
         <div class="col-3 icon-list">
-            <i class="nes-icon instagram is-middle"></i>
-            <i class="nes-icon linkedin is-middle"></i>
-            <i class="nes-icon whatsapp is-middle"></i>
+            <i class="nes-icon instagram is-middle" onclick="openIG()"></i>
+            <i class="nes-icon linkedin is-middle" onclick="openLinkedIn()"></i>
+            <i class="nes-icon whatsapp is-middle" onclick="openWhatsApp()"></i>
         </div>
         <a class="col link" href="all-jing-an.html">I want all of them >></a>
         <!-- bootstrap js -->
@@ -101,6 +101,7 @@
         <!-- broccoli code -->
         <script src="js/vueBroccmon.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/route.js"></script>
     </footer>
 </body>
 
